
The Initials of the contributors to this software are marked in square
brackets after the features/fixes that the person contributed.  A list of
contributors can be found at the end of this document.  If all changes in a
specific alpha release have been made by the same person, the person is
only mentioned in the headline of that alpha release, rather than after
each feature.


CFRoute 1.0 stable (forked off for release at 08 Oct 2000)
----------------------------------------------------------

    - Mail with Immediate flag is now packed as IUT instead of OUT, and
      you can specify "Immediate" as a routing flag in the ROUTE statement
      in the config file. Attention: Some mailers (e.g. BTXE) don't support
      the IUT flavour. So don't use the Immediate flag nor a "Immediate"
      ruting statement if you have such a mailer. [TE]
    - New: Support for JAM Message base (NETJAM keyword). This requires
      SMAPI 1.6.4b or newer! [TE, with help of the JAM part of smapi, written
      by Fedor Lizunkov's and Pavel Gulchouck]
    - Removed all fread/fwrite calls that read directly into structures.
      Cfroute now works without structure packing, independently of
      endianness or other architecture details. You can now use cfroute
      on any Unix machine, RISC or Intel. [TE]
    - Another bugfix for the handling of EXCEPT statements [TE].
    - Fixed some crashes on bad syntax in the configuration file. [TE]
    - Fix: Month field was set one too high (0 = January, but CFRoute
      wrote 1 for January, and so forth) [TE]
    - Fixed a crash when trying to route intransit mail without VIA
      kludge (this can only occur if other systems are misconfigured). [ED]
    - New keyword "RECODE". Simply do not use it. It is a TEMPORARY
      WORKAROUND for people in the Russian language area that do not yet
      support CHRS kludges according to FTSC. It takes as argument a
      recoding map similar to the one that hpt uses, and will recode all